# gloombot

./: .gitignore  README.md  embedding.py  gloombot.py  main.py  notebook.ipynb  pyproject.toml  querying.py
data/: validation_data.json
